basic Comit to Coming Soon page
* Added Image
* Added Coming Soon

--- a/index.html
+++ b/index.html
@@ -1,8 +1,42 @@
 <html>
   <head>
     <title>Ritmbhara Svasth Parivar - Coming Soon</title>  
+    <style>
+      html, body {
+          height: 100%;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          font-family: 'Poppins', sans-serif;
+      }
+
+      body {
+          flex-direction: column;
+      }
+
+      img.base-image {
+          max-height: 73%;
+          max-width: 100%;
+          object-fit: contain;
+      }
+
+      .main-title {
+    text-align: center;
+    text-wrap: wrap;
+    font-size: 5rem;
+    margin-top: -44px;
+    background: #051829;
+    color: white;
+}
+
+    </style>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+   
   </head>
   <body>
-    
+      <img src="./chakra 2 copy.png" class="base-image"/>
+      <div class="main-title">Coming Soon</div>
   </body>
 </html>
