# Ritmbhara Svasth Privar
## Fixed

- On Refresh Other pages were not loading
- Section Separator not spaiing 100% on some pages,.

## Added
- Contact Us Page

### Components

#### Buttons
- Added Disabled Stage to Buttons

#### Form
- Added Form and Form Item Component
- Error State
- Validation
- Form Controlled Mode.

#### Input
- Added Input Component
- Added TextArea Component

#### Cards
- Added Icon Text Card

#### Layout
- Added Right Left Image Context Layout section.

#### Text Sections
- H1H2P Section
- Added CTA support for H3Description Component

#### Loading Icon
- Added component.
- Added Page Loader

### Icons
- Email
- Location
- Phone

## Pages
- Contact Us Page Added
- Improved SEO

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>Ritmbhara Svasth Parivar</title>
   </head>
-  <body>
+  <body class="palette-light">
     <div id="root" class="ov-h fw"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
